--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 
   "version": "3.0.0-beta.3",
 
-  "description": "🏠 Offical Homebridge plugin for TuyAPI ",
+  "description": "🏠 Unofficial Homebridge plugin enabling local control of Tuya smart devices",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/hmenzagh/homebridge-tuya.git"
   },
-  "author": "Rayan Khan",
+  "author": "Rayan Khan & hmenzagh",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/hmenzagh/homebridge-tuya/issues"
