--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "homebridge-tuya",
-
+  "name": "homebridge-tuya-local",
+  "displayName": "Homebridge Tuya Local",
   "version": "3.0.0-beta.3",
 
   "description": "🏠 Unofficial Homebridge plugin enabling local control of Tuya smart devices",
